js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromElvisWithCrossModuleInliner/lib1/l1a.4.kt
inline fun foo(): Int? = null
